--- a/package.json
+++ b/package.json
@@ -1,24 +1,1 @@
-{
-  "name": "test-repo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JKI12/test-repo.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JKI12/test-repo/issues"
-  },
-  "homepage": "https://github.com/JKI12/test-repo#readme",
-  "dependencies": {
-    "@octokit/core": "^3.4.0",
-    "semver": "^7.3.5"
-  }
-}
+{"name":"test-repo","version":"1.0.1","description":"","main":"test.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"repository":{"type":"git","url":"git+https://github.com/JKI12/test-repo.git"},"keywords":[],"author":"","license":"ISC","bugs":{"url":"https://github.com/JKI12/test-repo/issues"},"homepage":"https://github.com/JKI12/test-repo#readme","dependencies":{"@octokit/core":"^3.4.0","btoa":"^1.2.1","semver":"^7.3.5"}}
