--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-repo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "test.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JKI12/test-repo#readme",
   "dependencies": {
     "@octokit/core": "^3.4.0",
+    "btoa": "^1.2.1",
     "semver": "^7.3.5"
   }
 }
